# talent-platform

./: .gitignore  AI_Talent_Intelligence_Platform.pptx  Dockerfile  README.md  convert_submission.py  docker-compose.yml  generate_submission_materials.py  precompute.py  pyproject.toml  rank.py  run_pipeline.py  validate_submission.py
.github/workflows/: ci.yml
src/api/: __init__.py  server.py
src/embeddings/: __init__.py  engine.py
src/evaluation/: __init__.py  evaluator.py
src/explanation/: __init__.py  generator.py
src/features/: __init__.py  feature_engineer.py
src/parsers/: __init__.py  candidate_parser.py  jd_parser.py
src/reranker/: __init__.py  cross_encoder.py
src/retrieval/: __init__.py  retriever.py  vector_store.py
src/schemas/: __init__.py  candidate.py  jd.py  scoring.py
src/scoring/: __init__.py  hybrid_scorer.py
tests/: test_candidate_parser.py  test_cross_encoder.py  test_embedding_engine.py  test_evaluator.py  test_explanation_generator.py  test_feature_engineer.py  test_hybrid_scorer.py  test_jd_parser.py  test_retriever.py  test_schemas_candidate.py  test_schemas_scoring.py  test_server.py  test_vector_store.py
ui/: app.py
