[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "talent-platform"
version = "0.1.0"
description = "AI Talent Intelligence Platform — Redrob Hackathon"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3.0",
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8,<2.0",
    "numpy>=1.26,<3.0",
    "loguru>=0.7,<1.0",
    "python-docx>=1.1,<2.0",
    "joblib>=1.4,<2.0",
    "tqdm>=4.66,<5.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "streamlit>=1.35,<2.0",
    "plotly>=5.22,<6.0",
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests that require model downloads or external resources (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"
